--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,23 @@ services:
       POSTGRES_PASSWORD:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_DB: controller
-    volume:
-      - ./backend/sql:/docker-entrypoint-initdb.d/
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+      - ./backend/sql/create.sql:/docker-entrypoint-initdb.d/create.sql
 
   backend:
     depends_on:
       - db
-    image: openjdk:17
+    links:
+      - db
+    image: openjdk:17-jdk-alpine
     container_name: envctl-backend
-    command: bash -c "wget $JAR_URL -O $JAR_FILE && java -jar $JAR_FILE"
+    ports:
+      - 8080:8080
     environment:
       JAR_FILE: envctl.jar
-      JAR_URL: https://github.com/maxrt101/envctl/releases/download/envctl-v1.0/envctl.jar
+      JAR_URL: https://github.com/maxrt101/envctl/releases/download/v1.0/envctl.jar
+    command: /bin/sh -c "wget $$JAR_URL -O $$JAR_FILE && java -jar $$JAR_FILE"
 
   frontend:
     image: nginx:alpine
