--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,9 +2,17 @@
 server {
   listen 80;
   server_name envctl;
+
   location / {
     root /usr/share/nginx/html;
     try_files $uri /index.html;
+  }
+
+  location /api {
+    proxy_pass http://backend:8080/api;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
   }
 }
 
